# NoteBook

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  make.ps1  openseriesnotebook.ipynb  postBuild  pyproject.toml  requirements.txt
