[tool.poetry]
description = "An introduction to the openseries Python package."
authors = ["Martin Karrin <martin.karrin@captor.se>"]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

[project.urls]
repository = "https://github.com/karrmagadgeteer2/NoteBook"

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]

keywords = [
    "python",
    "python3",
    "plotly",
    "pandas",
    "finance",
    "fintech",
    "data-science",
    "timeseries",
    "timeseries-data",
    "timeseries-analysis",
    "investment",
    "investment-analysis",
    "investing"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyterlab = "^4.1.2"
notebook = "^7.1.0"
openseries = "1.4.12"
