[project]
name = "openseriesnotebook"
version = "1.0.0"
description = "NoteBook examples for the openseries Python package."
authors = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
maintainers = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<3.14"
package-mode = false

dependencies = [
    "jupyterlab (>=4.1.3)",
    "notebook (>=7.1.1)",
    "openseries (>=1.4.9)",
    "ipywidgets (>=8.1.3)"
]

[project.urls]
repository = "https://github.com/karrmagadgeteer2/NoteBook"

[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"
