[project]
name = "openseriesnotebook"
version = "1.0.0"
description = "NoteBook examples for the openseries Python package."
authors = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
maintainers = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.11,<3.15"
package-mode = false

dependencies = [
    "notebook >=7.1.1",
    "openseries >=1.4.9"
]

[project.urls]
repository = "https://github.com/karrmagadgeteer2/NoteBook"

[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7.1"
